// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderiza resumen de gasto con 1 gasto. 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      N° Gastos: 
      <span>
        1
      </span>
       | Total Gastos:
      <span>
        $2.00
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Añadir Gasto
      </Link>
    </div>
  </div>
</div>
`;

exports[`Renderiza resumen de gasto con múltiples gastos. 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      N° Gastos: 
      <span>
        21
      </span>
       | Total Gastos:
      <span>
        $4,567.00
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Añadir Gasto
      </Link>
    </div>
  </div>
</div>
`;
